# reploid

./: ...  .AGENTS  .dockerignore  .env  .env.example  .firebaserc  .gitignore  .gitmodules  .reploidrc.json.example  AGENTS.md  API_SURFACE.md  DEPENDENCY_GRAPH.md  Dockerfile  EMOJI.md  FIX_MODEL.html  GUIDE.md  IMPROVEMENTS-2025-10-04.md  LICENSE  MODULE_INDEX.md  NEXT.md  PHASE1_PLAN.md  PHASE2_PLAN.md  README.md  RFC-STATUS.md  SECURITY-NOTES.md  SECURITY_AUDIT.md  SPRINT_TODO.md  TODO.md  TODO_REPLOID.md  about.html  boot.js  concat-files.js  concatenated-output.txt  config.json  elepehants.md  export-state.js  firebase.json  firebase.simulatte-hosting.json  firestore.indexes.json  index.html  (+21 more)
.claude/: settings.json  verify-hooks.sh
.firebase/: hosting..cache  hosting.cHVibGlj.cache
2025-05-16/: cats_out.bundle  dogs_in.bundle  function-objects.json  function-objects2.json  summary_before_after.txt
2025-05-19/: localStroage.json  x0_state_0.7.0_2025-05-20T00-32-19-734Z.json
blueprints/: 0x000000-reploid-genesis.md  0x000001-system-prompt-architecture.md  0x000002-application-orchestration.md  0x000003-core-utilities-and-error-handling.md  0x000004-default-storage-backend-localstorage.md  0x000005-state-management-architecture.md  0x000006-pure-state-helpers.md  0x000007-api-client-and-communication.md  0x000008-agent-cognitive-cycle.md  0x00000D-ui-manager.md  (+147 more)
dreamer/reploid/core/dreamer/bridge/native/: Cargo.toml  dreamer-bridge.sh  install.sh  manifest.json.template  native-host.js  test-host.js
dreamer/reploid/core/dreamer/bridge/native/src/: main.rs
(+3683 files in other folders)
