[package]
name = "titan-bridge"
version = "1.0.0"
edition = "2021"
description = "Titan Native Bridge - High-performance file access for LLM inference"
authors = ["Reploid Team"]
license = "MIT"

[dependencies]
serde_json = "1.0"
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
